# chessbuddy

./: README.md
ChessBuddy/: .flutter-plugins  .flutter-plugins-dependencies  .packages  pubspec.yaml
ChessBuddy/android/app/: build.gradle
ChessBuddy/android/app/src/main/: AndroidManifest.xml
ChessBuddy/android/app/src/main/kotlin/com/chessstockfish/chessbuddy/: MainActivity.kt
ChessBuddy/android/app/src/main/res/drawable/: launch_background.xml
ChessBuddy/android/app/src/main/res/drawable-v21/: launch_background.xml
ChessBuddy/android/app/src/main/res/values/: colors.xml  styles.xml
ChessBuddy/android/app/src/profile/: AndroidManifest.xml
ChessBuddy/assets/images/: splash_screen.xml
ChessBuddy/lib/: chesstabbar.dart  ffibridge.dart  main.dart  playstockfish.dart
ChessBuddy/libs/: CMakeLists.txt  api.cpp  exports.def
ChessBuddy/libs/Stockfish/: search.cpp  stockfishmain.cpp  stockfishmain.h  uci.cpp  uci.h
StockfishEngine/android/: CMakeLists.txt  build.gradle
StockfishEngine/ios/: stockfish.podspec
StockfishEngine/ios/Stockfish/src/: evaluate.h
StockfishEngine/lib/src/: stockfish.dart
